adicionando a função de compartilhar no celular

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,16 @@
 {
   "cSpell.words": [
     "Adiciona",
+    "alerta",
     "Alho",
     "armazenar",
+    "Associe",
+    "ativa",
     "atual",
+    "botão",
     "cada",
     "calcular",
+    "classe",
     "coletar",
     "Colorau",
     "compartilhado",
@@ -13,6 +18,8 @@
     "compartilhar",
     "Conteúdo",
     "Converte",
+    "Cria",
+    "detalhes",
     "Erro",
     "Função",
     "Funções",
@@ -20,14 +27,21 @@
     "Ingrediente",
     "ingredientes",
     "Inicializa",
+    "isso",
     "itens",
     "limpar",
     "lista",
     "listas",
+    "lógica",
     "objeto",
     "Obtém",
+    "pela",
     "Seção",
+    "substitua",
     "suportada",
-    "titulo"
+    "texto",
+    "titulo",
+    "título",
+    "todos"
   ]
 }
