melhorando titulos das listas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "Abóbora",
     "Adiciona",
     "alerta",
     "Alho",
@@ -7,9 +8,13 @@
     "Associe",
     "ativa",
     "atual",
+    "Azeite",
+    "Azeitona",
     "botão",
+    "branco",
     "cada",
     "calcular",
+    "Cenoura",
     "classe",
     "coletar",
     "Colorau",
@@ -21,6 +26,9 @@
     "Cria",
     "detalhes",
     "Erro",
+    "Farinha",
+    "Feijão",
+    "Feijoadinha",
     "Função",
     "Funções",
     "informações",
@@ -33,9 +41,12 @@
     "lista",
     "listas",
     "lógica",
+    "Mocotó",
     "objeto",
     "Obtém",
     "pela",
+    "preto",
+    "seca",
     "Seção",
     "substitua",
     "suportada",
