--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "Abóbora",
     "Adiciona",
+    "Agrião",
     "alerta",
     "Alho",
     "armazenar",
@@ -10,41 +11,59 @@
     "atual",
     "Azeite",
     "Azeitona",
+    "Batata",
     "botão",
     "branco",
+    "bruta",
+    "Bucho",
     "cada",
+    "Calabresa",
     "calcular",
+    "Cebola",
     "Cenoura",
     "classe",
     "coletar",
     "Colorau",
+    "Colve",
     "compartilhado",
     "compartilhamento",
     "compartilhar",
     "Conteúdo",
     "Converte",
+    "Costela",
     "Cria",
     "detalhes",
     "Erro",
+    "Ervilha",
     "Farinha",
     "Feijão",
     "Feijoadinha",
+    "frango",
     "Função",
     "Funções",
+    "Gordura",
     "informações",
     "Ingrediente",
     "ingredientes",
     "Inicializa",
     "isso",
     "itens",
+    "Leite",
+    "limpa",
     "limpar",
     "lista",
     "listas",
     "lógica",
+    "maços",
     "Mocotó",
+    "Mostarda",
     "objeto",
     "Obtém",
+    "Óleo",
+    "Orégano",
     "pela",
+    "Pelanca",
+    "Pimentão",
     "preto",
     "seca",
     "Seção",
