--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
     "Agrião",
     "alerta",
     "Alho",
+    "aqui",
     "armazenar",
+    "Assada",
     "Associe",
     "ativa",
     "atual",
@@ -19,9 +21,13 @@
     "cada",
     "Calabresa",
     "calcular",
+    "Caldo",
+    "caldos",
+    "Caso",
     "Cebola",
     "Cenoura",
     "classe",
+    "código",
     "coletar",
     "Colorau",
     "Colve",
@@ -29,17 +35,24 @@
     "compartilhamento",
     "compartilhar",
     "Conteúdo",
+    "Controle",
     "Converte",
     "Costela",
     "Cria",
     "detalhes",
+    "Dobradinha",
     "Erro",
     "Ervilha",
+    "existente",
     "Farinha",
+    "Farofa",
     "Feijão",
+    "Feijoada",
     "Feijoadinha",
+    "fornecer",
     "frango",
     "Função",
+    "funcionalidade",
     "Funções",
     "Gordura",
     "informações",
@@ -55,8 +68,11 @@
     "listas",
     "lógica",
     "maços",
+    "mantenha",
     "Mocotó",
     "Mostarda",
+    "nativo",
+    "navegador",
     "objeto",
     "Obtém",
     "Óleo",
@@ -64,14 +80,24 @@
     "pela",
     "Pelanca",
     "Pimentão",
+    "pode",
     "preto",
+    "Resto",
     "seca",
     "Seção",
+    "Sobre",
+    "Strogonoff",
     "substitua",
+    "sucesso",
+    "suporta",
     "suportada",
+    "suporte",
     "texto",
     "titulo",
     "título",
-    "todos"
+    "todos",
+    "usuário",
+    "Verifica",
+    "você"
   ]
 }
